--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_speed_dial: ^4.2.0
   file_picker : 4.0.2
+  after_layout: ^1.1.0
 
 dev_dependencies:
   flutter_test:
