--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,18 @@ dependencies:
   flutter_speed_dial: ^4.2.0
   file_picker : 4.0.2
   after_layout: ^1.1.0
+  geolocator: ^7.6.2
+  geocoding: ^2.0.1
+  url_launcher: ^6.0.10
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+
   flutter_test:
     sdk: flutter
 
