--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   geolocator: ^7.6.2
   geocoding: ^2.0.1
   url_launcher: ^6.0.10
+  device_info: 2.0.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
